[package]
name = "winrtsample"
version = "0.1.0"
authors = ["Angel Daniel Munoz Gonzalez <scythes.lol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }
druid = "0.5.0"
